# MashUp

./: .gitignore  README.md  app.py  env.example  exam.md  pyproject.toml  requirements.txt
MashUp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pages/: books.py  dbpedia.py  home.py  movies.py  music.py  news.py  page2.py  page3.py
utils/: chuck_norris.py
